# apnotes

./: Cargo.toml  LICENSE  README.md  cargo.toml
.github/workflows/: tagged-release.yml
cli-ui/: Cargo.toml
cli-ui/src/: main.rs  ui.rs
contrib/completion/: apnotes-completion.bash
contrib/man/: apnotes-tui.1.scd  apnotes.1.scd  apnotes.5.scd  aponotes-tui.1.scd
examples/: config_windows.example
examples/linux/: config  config_secret_service
examples/windows/: config
lib/: Cargo.toml
lib/migrations/2020-12-30-112451_create_metadata/: up.sql
lib/src/: apple_imap.rs  builder.rs  converter.rs  db.rs  edit.rs  error.rs  io.rs  lib.rs  macros.rs  merge.rs  model.rs  note.rs  profile.rs  schema.rs  sync.rs  util.rs
lib/src/notes/: grouped_remote_note_headers.rs  localnote.rs  mod.rs  note_headers.rs  remote_note_header_collection.rs  remote_note_metadata.rs
lib/src/notes/traits/: header_parser.rs  identifyable_note.rs  mergeable_note_body.rs  mod.rs
migrations/2020-12-30-112451_create_metadata/: down.sql  up.sql
migrations/2021-12-24-120000_rename_new_flag/: down.sql  up.sql
scripts/: edit
src/: apple_imap.rs  converter.rs  edit.rs  error.rs  fetcher.rs  imap.rs  io.rs  lib.rs  main.rs  note.rs  profile.rs  sync.rs  util.rs
src/imap/: Note.rs
src/mail/: fetcher.rs
src/notes/: note.rs
ui/: Cargo.toml
ui/src/: ui.rs
ui_iced/: Cargo.toml
ui_iced/src/: ui.rs
