[package]
name = "imap-notes"
version = "0.0.1"
authors = ["Findus"]
autobins = false

[dependencies]
curl = "0.4.25"
regex = "1"
imap = "1"
native-tls = "0.2"
mailparse = "0.8"
cascade = "0.1"

[dependencies.gdk]
version = "0.11.0"
features = ["v3_16"]

[dependencies.gtk]
version = "0.7.0"
features = ["v3_16"]

[dependencies.gio]
version = "0.7.0"
features = ["v2_44"]

[dependencies.webkit2gtk]
version = "0.8.0"

[[bin]]
name = "main"