[package]
name = "cli-ui"
version = "0.3.0"
authors = ["Philipp Hentschel <philipp@f1ndus.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apple_notes_manager = { path = "../lib" }
crossterm = { version = "0.19", features = [ "serde" ] }
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
itertools = "0.10.0"
colored = "2"
log = "0.4.14"
diesel = { features = ["sqlite"], version =  "1.4.5"}