[package]
name = "apnotes_tui"
version = "0.4.1"
authors = ["Philipp Hentschel <philipp@f1ndus.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apnotes_lib = { path = "../lib" }
crossterm = { version = "0.23.1", features = [ "serde" ] }
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
itertools = "0.10.0"
colored = "2"
log = "0.4.14"
diesel = { features = ["sqlite"], version =  "1.4.5"}
lazy_static = "1.4.0"
regex = "1.5.4"

[[bin]]
name = "apnotes-tui"
path = "src/main.rs"