[package]
name = "apple_notes_rs_lib"
version = "0.1.2"
authors = ["Findus"]
autobins = false

[dependencies]
curl = "0.4.25"
regex = "1"
imap = "2.1.2"
native-tls = "0.2"
mailparse = "0.8"
cascade = "0.1"
log = "0.4"
html2runes = "1.0.1"
xdg = "2.0.0"
walkdir = "2.3.1"
jfs = "0.6.2"
serde_json = "1.0.56"
serde_derive = "1.0.114"
serde = "1.0.114"
pulldown-cmark = "0.7.1"
subprocess = "0.2.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
glob = "0.3.0"
simple_logger = "1.6.0"
chrono = "0.4.13"
clap = "2.33.1"
diesel = { features = ["sqlite"], version =  "1.4.5"}
dotenv = "0.15.0"
itertools = "0.10.0"
colored = "2"

[dev-dependencies]
ctor = "0.1.17"
mockall = "0.8.0"