[package]
name = "apple_notes_rs_ui"
version = "0.0.2"
authors = ["Findus"]
autobins = false

[dependencies]
apple_notes_rs_lib = { path = "../lib" }

[target.'cfg(target_family = "unix")'.dependencies.gdk]
version = "0.11.0"
features = ["v3_16"]

[target.'cfg(target_family = "unix")'.dependencies.gtk]
version = "0.7.0"
features = ["v3_16"]

[target.'cfg(target_family = "unix")'.dependencies.gio]
version = "0.7.0"
features = ["v2_44"]

[[bin]]
name = "ui"
path = "./src/ui.rs"


