[package]
name = "apple_notes_rs_ui"
version = "0.0.2"
authors = ["Findus"]
autobins = false

[dependencies]
atk = "^0"
glib-sys = "^0"
gobject-sys = "^0"
glib = { version = "^0", features = ["subclassing"] }
gio = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
gtk = "^0"
once_cell = "^0"
pango = "^0"
pangocairo = "^0"
cairo-rs = { version = "^0", features = ["png"] }
apple_notes_rs_lib = { path = "../lib" }

[features]
#default = ["gtk_3_22_30"]
gtk_3_18 = ["gtk/v3_18", "gdk-pixbuf/v2_32", "gdk/v3_18", "gio/v2_46", "glib/v2_46", "pango/v1_38"] #for CI tools
gtk_3_22_30 = ["gtk_3_18", "gtk/v3_22_30", "gdk-pixbuf/v2_36", "gdk/v3_22", "gio/v2_56", "glib/v2_56", "pango/v1_42"] #for CI tools
gtk_3_24 = ["gtk_3_22_30", "gtk/v3_24", "atk/v2_30", "gdk-pixbuf/v2_36_8", "gdk/v3_24", "gio/v2_58", "glib/v2_58"] #for CI tools

[[bin]]
name = "ui"
path = "./src/ui.rs"
required-features = ["gtk/v3_16", "gio/v2_44"]


